plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.olsc.manorbrowser'
    compileSdk 36

    defaultConfig {
        applicationId "com.olsc.manorbrowser"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "beta-0.0.2"

        ndk {
            abiFilters "arm64-v8a", "armeabi-v7a"
        }

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    packagingOptions {
        jniLibs {
            useLegacyPackaging true
        }
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.geckoview
    implementation libs.swiperefreshlayout
    implementation libs.preference
    implementation libs.okhttp
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}
